--- a/index.html
+++ b/index.html
@@ -325,17 +325,14 @@ $(document).ready(function () {
 
 <p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-i-am-nischal-shrestha" class="section level1">
+<h1>Welcome! I am Nischal Shrestha</h1>
 <p></br></p>
-<div id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip." class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to tip.</h5>
+<div id="i-enjoy-video-games-and-chewing-on-gum." class="section level5">
+<h5>I enjoy video games and chewing on gum.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses." class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
-</div>
-<div id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees." class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced degrees.</h5>
+<div id="i-like-dogs-and-i-do-not-hold-any-advanced-degrees-yet." class="section level5">
+<h5>I like dogs and I do not hold any advanced degrees, yet.</h5>
 </div>
 <div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
 <h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
