--- a/portfolio.html
+++ b/portfolio.html
@@ -334,9 +334,9 @@ $(document).ready(function () {
 </ul>
 <p><br></p>
 <ul>
-<li><p><i class="fa fa-chart-pie"> </i> <a href="https://www.google.com">Project 2: Description</a></p>
+<li><p><i class="fa fa-chart-pie"> </i> <a href="https://shresnis000.github.io/project2/">Project 2: State Education</a></p>
 <ul>
-<li>Longer Description</li>
+<li>How well can you predict the wealth of a state by using it’s education metrics</li>
 </ul></li>
 </ul>
 
